// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiTab renders 1`] = `
<button
  aria-label="aria-label"
  class="kuiTab testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="kuiTab__content"
  >
    children
  </span>
</button>
`;

exports[`KuiTab renders isSelected 1`] = `
<button
  aria-label="aria-label"
  class="kuiTab testClass1 testClass2 kuiTab-isSelected"
  data-test-subj="test subject string"
>
  <span
    class="kuiTab__content"
  >
    children
  </span>
</button>
`;
